# third_party_elfutils

./: BUILD.gn  Makefile.in  OAT.xml  README.OpenSource  README.en.md  README.md  README_OpenHarmony.md  aclocal.m4  bundle.json  config.h  configure  elfutils.spec  elfutils_config.gni
backends/: Makefile.in  i386_init.c  x86_64_init.c
config/: Makefile.in
debuginfod/: Makefile.in
doc/: Makefile.in
lib/: BUILD.gn
libasm/: Makefile.in
libcpu/: .gitignore  BUILD.gn  Makefile.in  gen_dis.sh  i386_parse.c  i386_parse.h
libdw/: Makefile.in  libdw.h  libdwP.h
libdwelf/: Makefile.in
libdwfl/: Makefile.in
libebl/: Makefile.in
libelf/: elf_strptr.c
po/: de.po  elfutils.pot  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.po  ja.po  pl.gmo  pl.po  uk.po
src/: Makefile.in  ar.c  readelf.c
tests/: Makefile.in
