# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libeu_config") {
  cflags = [ "-fpic" ]
  include_dirs = [
    ".",
    "..",
  ]

  defines = [
    "HAVE_CONFIG_H",
    "_GNU_SOURCE",
  ]
}

ohos_static_library("libeu") {
  sources = [
    "color.c",
    "crc32.c",
    "crc32_file.c",
    "error.c",
    "next_prime.c",
    "printversion.c",
    "xasprintf.c",
    "xmalloc.c",
    "xstrdup.c",
    "xstrndup.c",
  ]

  public_configs = [ ":libeu_config" ]

  subsystem_name = "thirdparty"
  part_name = "elfutils"
}
